--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Test Alina Saaranto</title>
+		<title>Test </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,13 +36,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Alina Saaranto</h1>
-								<p> Ambitious Strategic Management and Statistics Master’s student. <br /> </p>
-								<br />
-								<p>Look at my previous <a href="#projects">projects</a> and check out my <a href="#resume">resume.</a> </p>
-								<br />
-								<p>Shoot me a message via <a href="https://www.linkedin.com/in/alinasaaranto/">linkedin</a> or <a href="mailto:saaranto.alina@gmail.com">email!</a></p>
-							</div>
+								<p> A student <br /> </p>
+								</div>
 						</div>
 						<nav>
 							<ul>
@@ -63,13 +58,6 @@
 								<h2 class="major">About</h2>
 								<img src="images/omakuva.jpg" alt="" style="float:right;max-width:33%"/></span>
 
-								<p>I am ambitious Strategic Management and Statistics Master’s student with strong experience in analytics.  Besides being highly skilled in math and stat softwares and quantitative analysis, I also have excellent people skills.  </p>
-								<p>My target is to become expert in big data and to dive deeper into even more technical side using more databases, programming and different softwares. I have strong curiosity towards data science and I want to strengthen my knowledge further in a fast-phased environment. I am intrigued by data visualization, numerical analysis and decision making but above all I am searching for an opportunity to learn big data business in its entirety. Having also responsibilities as a Project Manager in a SaaS company, I am enthusiastic about being part of customer projects.</p>
-								<p> I am currently pursuing my exchange year for M.Sc. in Hong Kong University focusing on statistics, data management, strategy and big data studies. I used to work in a fast growing supply chain logistics SaaS company and I learned there a lot about databases and big data.
-								However, I am always seeking for an opportunity to develop my data analysis skill set. </p>
-								<p>My favorite leisure time activities include sailing, cycling, running, dragon boating (Hong Kong), yoga, reading psychological literature and watching Finnish ice hockey.</p>
-								<p>Attached you can see couple of <a href="#projects">projects</a> I have been working on during the past year. </p>
-								<p>Feel free to contact me!</p>
 
 							</article>
 
@@ -77,59 +65,14 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 
-								<h3>Topic: Financial Engineering</h3><br />
-									<img src="images/fe.jpg" alt="" style="max-width:90%"/></span>
-									<p> Team: Alina Saaranto, Sara Melander <br /></p>
-									<p>
-									Understanding advanced theories of quantitative finance and how they can be applied to real option price data.
-									Structuring a simulation algorithm for different frequencies, hedging strategies and portfolio combinations.
-									Matlab functions used: subplottng, for-loops, matrix, while- loops, normal distribution, if-else, creating hedging function.<br />
-									<br />
-									Subject:<br />
-									Dynamically hedging SP 100 call options and portfolios with different hedging strategies (delta hedging, delta-vega hedging) and comparing the performance and cost.<br />
-									<br />
-									Technologies: Matlab, Excel, LaTeX.</p>
-
-									<h3><br />
-									Topic: Simulation</h3><br />
-									<img src="images/simulation.jpg" alt="" style="max-width:90%"/></span>
-									<p>Team: Alina Saaranto, Hannu Pantsar, Milja Asikainen</p>
-									<p>
-									Structuring, testing and analyzing a real life simulation problem.
-									Defining causal relationships, reinforcing (R) and balancing (B) loops.
-									Creating and understanding functions for different variables, defining storages, constants, variables.<br />
-									<br />
-									Subject:<br />
-									Simulating how student should optimize hours used for work vs. studies and how the student benefit and earned salary affects in the long and short run to graduation times and student’s energy level.<br />
-									<br />
-									Technologies used: VensimPLE.</p>
-
-									<h3>Topic: Team lead for an festival<br /> </h3>
-									<img src="images/sitsit.jpg" alt="" style="max-width:90%"/></span>
-									<p>	Organized the biggest evening event for +200 people during the Physics Festival.
-									I lead team of 10 people. Together we built everything from raw carrots to three meal dinner and reconstructed and decorated an empty venue to a dining hall with music and dance performances.<br />
-									<br />
-									Subject:<br />
-								  Physics Festival is one weekend event which	collects all the students of math and physics	around the Finland every year.
-									One weekend event full of lectures, excursions and collaboration between students from different universities.<br />
-									<br />
-									Result:<br />
-									The evening event I had organized was appraised to be the best ever arranged in Physics Festival's history. The festival is almost 20 years old.<br />
-									<br />
-									Links:<br />
-									Event page <a href="https://www.fyysikkokilta.fi/fysikerfest/">here</a><br />
-									Facebook page <a href="https://www.facebook.com/events/170833049989869/">here</a> <br />
- 								</p>
+							
+								</p>
 							</article>
 
 						<!-- About CV LISATTYNA toimiikohan????-->
 							<article id="resume">
 
-								<h2 class="major">Resume</h2>
-								<p> Download my <a href="saarantocv2017.pdf">resume.</a></p>
-								<embed src="saarantocv2017.pdf" width="100%" height="1500px" />
-
-							</article>
+								</article>
 
 						<!-- Gallery-->
 								<article id="gallery">
@@ -199,24 +142,11 @@ http://geekgirllife.com/place-text-over-images-on-hover-without-javascript/
 									<!-- Photo Grid -->
 									<div class="row">
 									   <div class="column">
-										 	<img src="images/lennossam.jpg" style="width:100%"></a>
-										 	<img src="images/mystinen.jpg" style="width:100%">
-											<img src="images/lentajam.jpg" style="width:100%"></a>
-											<img src="images/saaret.jpg" style="width:100%">
-									  </div>
+											  </div>
 									  <div class="column">
-											<img src="images/macauminam.jpg" style="width:100%">
-											<img src="images/mettapieni.jpg" style="width:100%">
-											<img src="images/tutoro.jpg" style="width:100%">
-											<img src="images/taxim.jpg" style="width:100%">
-											<img src="images/putousm.jpg" style="width:100%">
-										</div>
+												</div>
 									  <div class="column">
-											<img src="images/kavele2m.jpg" style="width:100%">
-											<img src="images/joukkuem.jpg" style="width:100%">
-											<img src="images/purjehdus.jpg" style="width:100%">
-											<img src="images/maisemavaellusm.jpg" style="width:100%">
-									  </div>
+										  </div>
 									</div>
 
 									</body>
@@ -232,26 +162,10 @@ http://geekgirllife.com/place-text-over-images-on-hover-without-javascript/
 						<article id="skills">
 								<h2 class="major">Skills</h2>
 
-								<ul>
-									<li>Statistical softwares: R, SAS</li>
-									<li>Mathematical: Matlab, Maple, Mathematica</li>
-									<li>Technical: GitHub, Scala, Eclipse</li>
-									<li>Webpage development: HTML5, CSS, Google Analytics</li>
-									<li>People skills: Project management, organizing events, communication, presentation skills,
-										endurance for hectic situations.</li>
-								</ul>
-
-								<p> For more information check out my <a href="#resume">resume</a> !</p>
-								<img src="images/kandikuva.jpg" alt="" style="float:middle;max-width:66%"/></span>
-								</ br>
 
 
 								<ul class="icons" position="center">
-									<li><a href="https://twitter.com/thealinaedit?lang=fi" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/alina.edit.7" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="https://fi.linkedin.com/in/alinasaaranto" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/alinaedition/" class="icon fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="mailto:saaranto.alina@gmail.com" class="icon fa-envelope"><span class="label">GitHub</span></a></li>
 								</ul>
 
 							</article>
@@ -503,11 +417,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="https://twitter.com/thealinaedit?lang=fi" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/alina.edit.7" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://fi.linkedin.com/in/alinasaaranto" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/alinaedition/" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="mailto:saaranto.alina@gmail.com" class="icon fa-envelope"><span class="label">GitHub</span></a></li>
 							</ul>
 						<p class="copyright">&copy; Based on HTML5 UP. </p>
 					</footer>
