--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 
-							
+
 								</p>
 							</article>
 
@@ -401,7 +401,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</div>
 										<div class="field">
 											<label for="demo-message">Message</label>
-											<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+											<textarea name="demossage" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
 										</div>
 										<ul class="actions">
 											<li><input type="submit" value="Send Message" class="special" /></li>
