--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<ul class="icons">
 							<li><a href="https://github.com/alinaedition/" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
-						<p class="copyright">&copy; Based on HTML5 UP. </p>
+						<p class="copyright">&copy; Based on HTML5 9 UP. </p>
 					</footer>
 
 			</div>
